# le_hey_eye

./: components.json  index.html  package.json  pnpm-lock.yaml  styles.css  tailwind.config.cjs  tsconfig.json  ui.config.json  vite.config.ts
shared/: api.ts  invoke.d.ts
shared/types/: index.ts
src/: App.tsx  app.tsx  index.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/bindings/: AnthropicImageSource.ts  AnthropicModelSettings.ts  AnthropicThinkingType.ts  AnthropicTool.ts  AnthropicToolChoice.ts  AnthropicToolChoiceType.ts  CacheControl.ts  CacheType.ts  CloudflareError.ts  CloudflareModel.ts  CloudflareModelProperty.ts  CloudflareModelTask.ts  CloudflareResultInfo.ts  CloudflareUsage.ts  ContentBlock.ts  ContentType.ts  ImageMediaType.ts  ImageSourceType.ts  InputSchema.ts  Message.ts  MessageContent.ts  PropertySchema.ts  SystemPromptData.ts  SystemPromptType.ts  TokenUsage.ts
src-tauri/entity/: Cargo.toml
src-tauri/migration/: Cargo.toml
src-tauri/src/: ai_provider.rs  lib.rs  main.rs  types.rs
src-tauri/src/entity/: Cargo.toml
src-tauri/src/entity/bindings/: entities.ts
src-tauri/src/entity/src/: anthropic_models_settings.rs  app_appearance.rs  lib.rs  messages.rs  models_settings.rs  provider_tools.rs  providers_tools.rs  thinking.rs  tool_properties.rs  tool_required_props.rs  tools.rs  topics.rs
src/context/: global-context.tsx  topics-context.tsx  topicsContext.tsx
src/lib/: helper.ts
src/store/: model-settings-store.ts  topics.ts  ui.ts
types/: anthropic.ts  chat.ts  cloudflare.ts  core.ts  entity.ts
(+129 files in other folders)
