[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "1.1.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
ts-rs = { version = "10.1.0", features = ["format", "import-esm", "serde-compat", "serde-json-impl", "chrono-impl"] }

